...
        type: CurrencyType.ETHEREUM,
        icon: faEthereum,
        style: "ethereumIcon",
        styles: {
            color: "#3C3C3D",
        },
        title: "Add an Ethereum Wallet",
        addressInput: "Wallet address (Begins with 0x)",
        loadingTitle: "Adding Ethereum Wallet",
        currencyTag: "ETH",
    },
};

...
