...
                    )}
                </VStack>
                <Button
                    variant="outline"
                    _text={{ color: "error.500" }}
                    onPress={handleDeleteWallet}
                    testID="removeWalletButton"
                >
                    Remove wallet
                </Button>
            </VStack>
        </View>
    );
...
